--- a/runtime/LISTBOX/index.html
+++ b/runtime/LISTBOX/index.html
@@ -10,6 +10,9 @@
     <br><br><br>
     <select multiple="multiple" id="List1" style="width: 100px;"></select>
     <select multiple="multiple" id="List2" style="width: 100px;"></select>
+    <div id="box">
+        
+    </div>
 
 
 
